add temp ParquetArrowReader api